# libmcstatus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: cmake.yml
cmake/: libmcstatusConfig.cmake.in
include/libmcstatus/: JavaServer.hpp  McPacket.hpp  McServer.hpp  libmcstatus.hpp
include/libmcstatus/impl/: SrvResolver.hpp  Utils.hpp
src/: JavaServer.cpp  McPacket.cpp  McServer.cpp  SrvResolver.cpp  Utils.cpp  test.cpp
tests/: CMakeLists.txt  GlobalMocks.hpp  McPacket.cpp  SrvResolver.cpp  Utils.cpp  test.cpp
